[package]
name = "tricore-common"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
anyhow = "1.0.69"
serde = { version = "1.0", features = ["derive"], optional = true }
bitfield-struct = "0.3.2"

[features]
# Enable to allow structures in this crate to be serialized through serde
serde = ["dep:serde"]
