[package]
name = "tricore-docker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
ciborium = "0.2.0"
clap = { version = "4.1.13", features = ["derive"]}
tempfile = "3.4.0"
ftd-api = { path = "ftd-api" }
rpc-api = { path = "rpc-api" }
native = { path = "native" }
tricore-common = { path = "../tricore-common" }
