[package]
name = "tricore-docker"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.70"
log = "0.4.17"
ciborium = "0.2.0"
clap = { version = "4.1.13", features = ["derive"]}
tempfile = "3.4.0"
rpc-api = { path = "rpc-api" }
tricore-common = { path = "../tricore-common" }

udev = {version = "0.8.0"}