[package]
name = "tricore-windows"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4.17"
tempfile = "3.3.0"
byteorder = "1.4.3"
rust-mcd = { path = "../rust-mcd" }
tricore-common = { path = "../tricore-common" }

[features]
dasv8 = ["rust-mcd/dasv8"]
