[package]
name = "rpc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.0"
serde = { version = "1.0", features = ["derive"]}
ftd-api = { path = "../ftd-api" }
anyhow = "1.0.69"
log = "0.4.0"
tricore-common = { path = "../../tricore-common", features = ["serde"]}