[package]
name = "rpc-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.0"
serde = { version = "1.0", features = ["derive"]}
anyhow = "1.0.69"
log = "0.4.0"
tricore-common = { path = "../../tricore-common", features = ["serde"]}

[dependencies.libftd2xx]
version = "0.32.4"
features = ["static"]