[package]
name = "ftd2xx"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type=["cdylib"]

[dependencies]
ftd-api = { path = "../ftd-api" }
rpc-api = { path = "../rpc-api" }
ciborium = "0.2.0"
serde = "1.0.152"
anyhow = "1.0.69"
dll-export = { path = "../dll-export" }
log = { version = "0.4.0", features = ["std"] }

[features]
default = ["export"]
export = []
